@@ -1,0 +1,69 @@
+
+[plugin tcp]
+name tcp
+library builtin
+part tcp
+code "YA" 0xE4 0x1E 0 0 "RP"
+
+[plugin tcp_fast]
+name tcp_fast
+library builtin
+part tcp 
+code "YA" 0xE4 0x1E 0 0 "RP"
+
+[plugin mcast]
+name mcast
+library builtin
+part mcast
+code "YA" 0xE2 0x1E 0 0 "RP"
+
+# mcast has a second code variant for historic reasons
+[plugin mcast2]
+name mcast
+library builtin
+part mcast
+code "YA" 0x62 0x1E 0 0 "RP"
+
+[plugin shmem]
+name shmem
+library builtin
+part shmem
+code "YA" 0xE3 0x1E 0 0 "RP"
+
+# shmem has a second code variant for historic reasons
+[plugin shmem2]
+name shmem
+library builtin
+part shmem
+code "YA" 0x63 0x1E 0 0 "RP"
+
+[plugin udp]
+name udp
+library builtin
+part udp
+code "YA" 0xE1 0x1E 0 0 "RP"
+
+# shmem has a second code variant for historic reasons
+[plugin udp2]
+name udp
+library builtin
+part udp
+code "YA" 0x61 0x1E 0 0 "RP"
+
+[plugin text]
+name text
+library builtin
+part text
+code "CONNECT"
+
+[plugin text_ack]
+name text_ack
+library builtin
+part text
+code "CONNACK"
+
+[plugin local]
+name local
+library builtin
+part local
+code "LOCALITY"
