@@ -1,0 +1,11 @@
+[plugin mpi_p2p]
+name mpi
+library yarp_mpi
+part mpi
+code "MPI_____"
+
+[plugin mpi_bcast]
+name bcast
+library yarp_mpi
+part bcast
+code "MPIBCAST"
