@@ -1,0 +1,12 @@
+[plugin tcpros]
+name tcpros
+library yarp_tcpros
+part tcpros
+code (any) (any) "\0\0" (any) (any) "\0\0"
+
+[plugin rossrv]
+name rossrv
+library yarp_tcpros
+part tcpros
+code (any) (any) "\0\0" (any) (any) "\0\0"
+
