@@ -1,0 +1,5 @@
+[plugin xmlrpc]
+name xmlrpc
+library yarp_xmlrpc
+part xmlrpc
+code "POST /"
