@@ -1,3 +1,9 @@
+2012-12-19  Paul Fitzpatrick  <paul@robotrebuilt.com>
+
+	* src/libYARP_OS/src/Carriers.cpp: prototype of method for
+	detecting correct runtime plugin to load on receiver side of a
+	connection.
+
 2012-12-18  Paul Fitzpatrick  <paul@robotrebuilt.com>
 
 	* src/libYARP_OS/src/Carriers.cpp: fix dynamically-loaded
